fix #9903 : header isn't the same align into my-account and anothers apps

--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -349,6 +349,8 @@ nav.horizontal{
   .searchPortal input{
     color: $white;
     margin-top: 15px;
+    display: block;
+    float: left;
   }
   i.mail span{
     background-color: $accent;
